# Rust_Kpop_Semester_Project

./: .env  Cargo.toml  README.md  database.sqlite  database1.sqlite  database2.sqlite  diesel.toml  test_data_01.csv
migrations/2026-07-12-170532-0000_create_initial_tables/: down.sql  up.sql
src/: album.rs  companies.rs  csv_import.rs  database.rs  database.sqlite  database2.sqlite  database3.sqlite  enums.rs  groups.rs  idol.rs  lib.rs  main.rs  randomizer.rs  schema.rs  schema_tapedecks.rs  tapedeck.rs  the_structs_file.rs
src/database/: mod.rs
tests/: database0.rs
