[package]
name = "Rust_Kpop_Semester_Project"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
csv = "1.4.0"
diesel = { version = "2.3.10", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
dotenv = "0.15.0"
rand = "0.8"
csv = "1.4.0"
serde = { version = "1", features = ["derive"] }